eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ses-demo-deployment
  labels:
    app: ses-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ses-demo
  template:
    metadata:
      labels:
        app: ses-demo
    spec:
      containers:
      - name: ses-demo
        image: 044135815009.dkr.ecr.eu-west-1.amazonaws.com/solenersync
        ports:
        - containerPort: 8080
