eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ses-demo-service
spec:
  selector:
    app.kubernetes.io/name: ses-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
