eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ses-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: "www.solenersync.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ses-demo-service
            port:
              number: 80
  tls:
  - hosts:
    - www.solenersync.com
    secretName: solenersync-cert
